clang/test/BSC/Negative/Ownership/Owned/return_stmt_memory_leak/return_stmt_memory_leak.cbs
// RUN: %clang_cc1 -verify %s 

int SetVersionInfo(int id, const char* name, const char* commitId);

_Owned struct String {
public:
    const char *_Borrow as_str(const String *_Borrow this);
};


_Safe int SafeSetVersionInfo(int id, String name, String commitId)
{
    _Unsafe {
         return SetVersionInfo(id, (const char*)name.as_str(), (const char*)commitId.as_str()); // expected-error {{memory leak because temporary variable 'name' is _Owned or indirect _Owned type, please fix it}}
    }
}

int main(){

    return 0;
}
